// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/card/addActionCard > Basic Rendering > should render as selected 1`] = `
[
  <div
    id="placeholder-node-Trigger-description"
    style={
      {
        "display": "none",
      }
    }
  >
    Triggers
    : 
    Triggers tell your app when to start running. Each workflow needs at least one trigger.
  </div>,
  <div
    className="ms-TooltipHost root-109"
    onBlurCapture={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="none"
  >
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <div
        aria-describedby="placeholder-node-Trigger-description"
        aria-label="Add a trigger"
        className="msla-panel-card-container msla-panel-card-container-selected"
        data-automation-id="card-add_a_trigger"
        data-testid="card-Add a trigger"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          {
            "borderLeft": "4px solid #484F58",
            "borderRadius": "2px",
          }
        }
        tabIndex={0}
      >
        <div
          className="msla-selection-box selected"
        />
        <div
          className="panel-card-main"
        >
          <div
            className="panel-card-header"
            role="button"
          >
            <div
              className="panel-card-content-container"
            >
              <div
                className="panel-card-content-gripper-section"
              />
              <div
                className="panel-card-content-icon-section"
              >
                <img
                  alt=""
                  className="panel-card-icon"
                  src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='utf-8'?%3e%3csvg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:xlink='http://www.w3.org/1999/xlink'%20x='0px'%20y='0px'%20width='20px'%20height='20px'%20viewBox='0%200%2020%2020'%20xml:space='preserve'%20fill='white'%20%3e%3cpath%20d='M20,5V0H0v5h9.26v9.22l-2.19-2.19l-0.71,0.71l2.69,2.7l0,0L9.63,16H0v4h20v-4H9.9l0.57-0.57l0,0l2.69-2.7%20l-0.71-0.71l-2.19,2.19V5H20z%20M1,1h18v3H1V1z'/%3e%3c/svg%3e"
                  style={
                    {
                      "background": "#484F58",
                      "height": "16px",
                      "padding": "4px",
                      "width": "16px",
                    }
                  }
                />
              </div>
              <div
                className="panel-card-top-content"
              >
                <div
                  className="panel-msla-title"
                >
                  Add a trigger
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      hidden={true}
      id="placeholder-node-Trigger"
      style={
        {
          "border": 0,
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      <div
        style={
          {
            "margin": "-8px 12px 0px",
            "maxWidth": "250px",
          }
        }
      >
        <h2>
          Triggers
        </h2>
        <p>
          Triggers tell your app when to start running. Each workflow needs at least one trigger.
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`lib/card/addActionCard > Basic Rendering > should render with minimal props 1`] = `
[
  <div
    id="placeholder-node-Trigger-description"
    style={
      {
        "display": "none",
      }
    }
  >
    Triggers
    : 
    Triggers tell your app when to start running. Each workflow needs at least one trigger.
  </div>,
  <div
    className="ms-TooltipHost root-109"
    onBlurCapture={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="none"
  >
    <div
      style={
        {
          "position": "relative",
        }
      }
    >
      <div
        aria-describedby="placeholder-node-Trigger-description"
        aria-label="Add a trigger"
        className="msla-panel-card-container"
        data-automation-id="card-add_a_trigger"
        data-testid="card-Add a trigger"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        style={
          {
            "borderLeft": "4px solid #484F58",
            "borderRadius": "2px",
          }
        }
        tabIndex={0}
      >
        <div
          className="msla-selection-box"
        />
        <div
          className="panel-card-main"
        >
          <div
            className="panel-card-header"
            role="button"
          >
            <div
              className="panel-card-content-container"
            >
              <div
                className="panel-card-content-gripper-section"
              />
              <div
                className="panel-card-content-icon-section"
              >
                <img
                  alt=""
                  className="panel-card-icon"
                  src="data:image/svg+xml,%3c?xml%20version='1.0'%20encoding='utf-8'?%3e%3csvg%20version='1.1'%20xmlns='http://www.w3.org/2000/svg'%20xmlns:xlink='http://www.w3.org/1999/xlink'%20x='0px'%20y='0px'%20width='20px'%20height='20px'%20viewBox='0%200%2020%2020'%20xml:space='preserve'%20fill='white'%20%3e%3cpath%20d='M20,5V0H0v5h9.26v9.22l-2.19-2.19l-0.71,0.71l2.69,2.7l0,0L9.63,16H0v4h20v-4H9.9l0.57-0.57l0,0l2.69-2.7%20l-0.71-0.71l-2.19,2.19V5H20z%20M1,1h18v3H1V1z'/%3e%3c/svg%3e"
                  style={
                    {
                      "background": "#484F58",
                      "height": "16px",
                      "padding": "4px",
                      "width": "16px",
                    }
                  }
                />
              </div>
              <div
                className="panel-card-top-content"
              >
                <div
                  className="panel-msla-title"
                >
                  Add a trigger
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      hidden={true}
      id="placeholder-node-Trigger"
      style={
        {
          "border": 0,
          "height": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
    >
      <div
        style={
          {
            "margin": "-8px 12px 0px",
            "maxWidth": "250px",
          }
        }
      >
        <h2>
          Triggers
        </h2>
        <p>
          Triggers tell your app when to start running. Each workflow needs at least one trigger.
        </p>
      </div>
    </div>
  </div>,
]
`;
